--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,60 @@ footer {
 .modo-oscuro button:hover {
     background-color: #3c7d58;
 }
+
+.mensaje {
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+    display: none; /
+}
+
+.mensaje.exito {
+    background-color: #28a745;
+    color: white;
+}
+
+.mensaje.error {
+    background-color: #dc3545;
+    color: white;
+}
+
+
+/* css para el register.php */
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+}
+.alert.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+.alert.danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+.btn-primary {
+    background-color: #155724;
+    color: white;
+}
+.btn-primary:hover {
+    background-color: #155724;
+}
